--- a/package.json
+++ b/package.json
@@ -25,17 +25,18 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/typeorm": "^9.0.0",
+    "@nestjs/typeorm": "^8.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "env-var": "^7.1.1",
     "is-empty": "^1.2.0",
     "moment": "^2.29.4",
     "pg": "^8.7.3",
+    "referral-codes": "^2.0.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.7",
+    "typeorm": "^0.2.41",
     "whatsapp-web.js": "^1.17.1"
   },
   "devDependencies": {
